to compile example

--- a/example/code_analysis/Makefile
+++ b/example/code_analysis/Makefile
@@ -2,7 +2,7 @@
 
 SRCS:=code_analysis.cpp
 
-SHARED:=../../../shared/
+SHARED:=../../deep/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 include $(SHARED)make/gtest.mk
