--- a/example/etc/Makefile
+++ b/example/etc/Makefile
@@ -1,7 +1,7 @@
 SRCS:=\
 	coding_style.cpp comment.cpp debug.cpp naming.cpp ut.cpp
 
-SHARED:=../../deep/make
+SHARED:=../../deep/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 include $(SHARED)make/gtest.mk
