--- a/example/ref_async_r1/Makefile
+++ b/example/ref_async_r1/Makefile
@@ -1,7 +1,7 @@
 SRCS:=lib.cpp lib_ut.cpp
 SRCS2:=main.cpp lib.cpp
 
-SHARED:=../../../shared/
+SHARED:=../../deep/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 include $(SHARED)make/gtest.mk
