--- a/exercise/design_pattern_q/Makefile
+++ b/exercise/design_pattern_q/Makefile
@@ -8,7 +8,7 @@ SUPPRESS_WARN=-Wno-effc++ -Wno-unused-variable -Wno-delete-incomplete -Wno-unuse
               -Wno-sizeof-array-argument -Wno-unused-parameter -Wno-conversion-null \
 		      -Wno-literal-conversion
 
-SHARED:=../../../shared/
+SHARED:=../../deep/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 include $(SHARED)make/gtest.mk
