--- a/exercise/programming_convention_a/Makefile
+++ b/exercise/programming_convention_a/Makefile
@@ -1,7 +1,7 @@
 SRCS:=\
 	class.cpp operator.cpp etc.cpp syntax.cpp func.cpp type.cpp
 
-SHARED:=../../../shared/
+SHARED:=../../deep/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 include $(SHARED)make/gtest.mk
