--- a/exercise/programming_convention_q/Makefile
+++ b/exercise/programming_convention_q/Makefile
@@ -8,7 +8,7 @@ SUPPRESS_WARN=-Wno-effc++ -Wno-unused-variable -Wno-delete-incomplete -Wno-unuse
 		      -Wno-literal-conversion
 # @@@ sample end
 
-SHARED:=../../../shared/
+SHARED:=../../deep/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 include $(SHARED)make/gtest.mk
