--- a/example/programming_convention/Makefile
+++ b/example/programming_convention/Makefile
@@ -2,7 +2,7 @@ SRCS:=\
     class_ut.cpp etc.cpp fixed_point_ut.cpp float_ut.cpp func_ut.cpp \
     header_ut.cpp lib/header.cpp operator_ut.cpp preprocessor_ut.cpp runtime_ut.cpp scope_ut.cpp \
     scoped_guard_ut.cpp string_vector.cpp string_view_ut.cpp syntax_ut.cpp type_ut.cpp \
-	type_const_ut.cpp
+	type_const_ut.cpp pkg.cpp
 
 SHARED:=../../deep/
 include $(SHARED)make/env.mk
