--- a/example/deps/file_utils/CMakeLists.txt
+++ b/example/deps/file_utils/CMakeLists.txt
@@ -1,4 +1,10 @@
-#file_utils/CMakeLists.txt
+cmake_minimum_required(VERSION 3.10)
+
+project(file_utils VERSION 1.0)
+
+# C++の標準を設定
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 cmake_minimum_required(VERSION 3.10)
 
 project(file_utils VERSION 1.0)
@@ -20,8 +26,14 @@ target_link_libraries(file_utils_ut_exe file_utils logging gtest gtest_main)
 
 target_include_directories(file_utils_ut_exe PRIVATE h ../../../deep/h ../logging/h ../lib/h)
 
+# テストデータのコピーコマンドを追加
+add_custom_command(TARGET file_utils_ut_exe POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/ut_data $<TARGET_FILE_DIR:file_utils_ut_exe>/ut_data
+)
+
 enable_testing()
-add_test(NAME file_utils_ut_test COMMAND file_utils_ut_exe)
+add_test(NAME file_utils_ut COMMAND file_utils_ut_exe)
 
 # カスタムターゲットを追加して、ビルド後にテストを実行
 add_custom_target(file_utils_ut_run
