--- a/example/deps/CMakeLists.txt
+++ b/example/deps/CMakeLists.txt
@@ -1,4 +1,3 @@
-# deps/CMakeLists.txt
 cmake_minimum_required(VERSION 3.10)
 
 project(main_project)
@@ -7,6 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 set(GTEST_DIR "../../googletest")
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(${GTEST_DIR} ${CMAKE_BINARY_DIR}/googletest)
 
@@ -16,10 +16,10 @@ add_subdirectory(file_utils)
 add_subdirectory(dependency)
 add_subdirectory(app)
 
-# $B%+%9%?%`%?!<%2%C%H$rDI2C$7$F!"$9$Y$F$N%F%9%H$r<B9T(B
-add_custom_target(run_all_tests
-    COMMAND ${CMAKE_CTEST_COMMAND} -C $<CONFIG> --output-on-failure -T test --build-config $<CONFIG>
-    DEPENDS app_ut lib_ut logging_ut
+
+# カスタムターゲットを追加して、すべてのテストを実行
+add_custom_target(tests
+    DEPENDS app_ut dependency_ut file_utils_ut lib_ut logging_ut deps_it
     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
 )
 
