--- a/example/deps/logging/CMakeLists.txt
+++ b/example/deps/logging/CMakeLists.txt
@@ -7,6 +7,7 @@ project(logging VERSION 1.0)
 # C++の標準を設定
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_library(logging STATIC src/logger.cpp)
 
