--- a/example/architecture/view/CMakeLists.txt
+++ b/example/architecture/view/CMakeLists.txt
@@ -1,9 +1,9 @@
 add_library(view STATIC src/view.cpp)
-target_include_directories(view PRIVATE src ../view/h)
+target_include_directories(view PRIVATE src ../view/h ${DEPS_DIR}/logging/h ${DEPS_DIR}/lib/h)
 target_include_directories(view PUBLIC ../view/h ../model/h)
 
 # Unit test
 add_executable(view_ut ut/view_ut.cpp)
 
-target_link_libraries(view_ut view gtest gtest_main)
+target_link_libraries(view_ut view gtest gtest_main logging)
 add_test(NAME ViewTest COMMAND view_ut)
