--- a/example/architecture/CMakeLists.txt
+++ b/example/architecture/CMakeLists.txt
@@ -4,21 +4,29 @@ project(architecture)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+# Enable testing
+enable_testing()
+
+# Google Test
 set(GTEST_DIR "../../googletest")
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 include_directories("${GTEST_DIR}/googletest/include")
 add_subdirectory(${GTEST_DIR} ${CMAKE_BINARY_DIR}/googletest EXCLUDE_FROM_ALL)
+set(DEPS_DIR ../../deps)
 
 # Add subdirectories
 add_subdirectory(controller)
 add_subdirectory(model)
 add_subdirectory(view)
 
+# Add deps subdirectories
+add_subdirectory(${CMAKE_SOURCE_DIR}/../deps/lib ${CMAKE_BINARY_DIR}/deps_lib)
+add_subdirectory(${CMAKE_SOURCE_DIR}/../deps/logging ${CMAKE_BINARY_DIR}/deps_logging)
+
 # Create the executable
 add_executable(app app/main.cpp)
 
 # Link the libraries
-target_link_libraries(app controller model view)
+target_link_libraries(app controller model view logging)
 
 # Clang-Format
 file(GLOB_RECURSE ALL_CXX_SOURCE_FILES
