--- a/example/architecture/model/CMakeLists.txt
+++ b/example/architecture/model/CMakeLists.txt
@@ -1,9 +1,9 @@
-add_library(model src/model.cpp src/command_executor.cpp src/slow_mover.cpp)
+add_library(model src/model.cpp src/command_executor.cpp src/x.cpp)
 target_include_directories(model PRIVATE src ${DEPS_DIR}/logging/h ${DEPS_DIR}/lib/h)
 target_include_directories(model PUBLIC ../model/h)
 
 # Unit test
-add_executable(model_ut ut/model_ut.cpp ut/command_executor_ut.cpp ut/slow_mover_ut.cpp)
+add_executable(model_ut ut/model_ut.cpp ut/command_executor_ut.cpp ut/x_ut.cpp)
 target_include_directories(model_ut PRIVATE src ${DEPS_DIR}/logging/h ${DEPS_DIR}/lib/h)
-target_link_libraries(model_ut model gtest gtest_main)
+target_link_libraries(model_ut model gtest gtest_main logging)
 add_test(NAME ModelTest COMMAND model_ut)
