--- a/example/architecture/model/CMakeLists.txt
+++ b/example/architecture/model/CMakeLists.txt
@@ -3,7 +3,9 @@ target_include_directories(model PRIVATE src ${DEPS_DIR}/logging/h ${DEPS_DIR}/l
 target_include_directories(model PUBLIC ../model/h)
 
 # Unit test
-add_executable(model_ut ut/model_ut.cpp ut/command_executor_ut.cpp ut/x_ut.cpp)
+add_executable(model_ut
+ut/model_ut.cpp ut/command_executor_ut.cpp ut/command_executor_state_ut.cpp ut/x_ut.cpp)
+
 target_include_directories(model_ut PRIVATE src ${DEPS_DIR}/logging/h ${DEPS_DIR}/lib/h)
 target_link_libraries(model_ut model gtest gtest_main logging)
 add_test(NAME ModelTest COMMAND model_ut)
