--- a/example/architecture/model/CMakeLists.txt
+++ b/example/architecture/model/CMakeLists.txt
@@ -4,7 +4,7 @@ target_include_directories(model PUBLIC ../model/h)
 
 # Unit test
 add_executable(model_ut
-ut/model_ut.cpp ut/command_executor_ut.cpp ut/command_executor_state_ut.cpp ut/x_ut.cpp)
+ut/model_ut.cpp ut/command_executor_ut.cpp ut/x_ut.cpp)
 
 target_include_directories(model_ut PRIVATE src ${DEPS_DIR}/logging/h ${DEPS_DIR}/lib/h)
 target_link_libraries(model_ut model gtest gtest_main logging)
