--- a/example/ref_async_r5/Makefile
+++ b/example/ref_async_r5/Makefile
@@ -3,6 +3,7 @@ SRCS:=arg.cpp model.cpp view.cpp controller.cpp \
 
 SRCS2:=main.cpp arg.cpp model.cpp view.cpp controller.cpp
 
+OBJDIR:=
 SHARED:=../../deep/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
