--- a/exercise/programming_convention_q/Makefile
+++ b/exercise/programming_convention_q/Makefile
@@ -1,13 +1,14 @@
 SRCS:=\
-	class.cpp operator.cpp etc.cpp syntax.cpp func.cpp type.cpp
+    class.cpp operator.cpp etc.cpp syntax.cpp func.cpp type.cpp
 
 # @@@ sample begin 0:0
  
 SUPPRESS_WARN=-Wno-effc++ -Wno-unused-variable -Wno-delete-incomplete -Wno-unused-function \
               -Wno-sizeof-array-argument -Wno-unused-parameter -Wno-conversion-null \
-		      -Wno-literal-conversion
+              -Wno-literal-conversion
 # @@@ sample end
 
+OBJDIR:=
 SHARED:=../../deep/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
