--- a/exercise/template_a/Makefile
+++ b/exercise/template_a/Makefile
@@ -2,6 +2,7 @@ SRCS:=\
 	parameter_pack.cpp template_alias.cpp put_to.cpp safe_array.cpp is_void.cpp \
     template_template.cpp is_same.cpp exists_func.cpp array_op.cpp scoped_guard.cpp
 
+OBJDIR:=
 SHARED:=../../deep/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
