--- a/example/etc/Makefile
+++ b/example/etc/Makefile
@@ -1,6 +1,7 @@
 SRCS:=\
 	coding_style.cpp comment.cpp debug.cpp naming.cpp ut.cpp
 
+OBJDIR:=
 SHARED:=../../deep/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
