--- a/example/ref_async_r2/Makefile
+++ b/example/ref_async_r2/Makefile
@@ -1,6 +1,7 @@
 SRCS:=lib.cpp lib_ut.cpp
 SRCS2:=main.cpp lib.cpp
 
+OBJDIR:=
 SHARED:=../../deep/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
