--- a/example/ref_async_r3/Makefile
+++ b/example/ref_async_r3/Makefile
@@ -1,6 +1,7 @@
 SRCS:=model_ut.cpp view_ut.cpp controller_ut.cpp model.cpp view.cpp controller.cpp 
 SRCS2:=main.cpp model.cpp view.cpp controller.cpp 
 
+OBJDIR:=
 SHARED:=../../deep/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
