--- a/exercise/programming_convention_a/Makefile
+++ b/exercise/programming_convention_a/Makefile
@@ -1,6 +1,7 @@
 SRCS:=\
 	class.cpp operator.cpp etc.cpp syntax.cpp func.cpp type.cpp
 
+OBJDIR:=
 SHARED:=../../deep/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
