--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "googletest"]
 	path = googletest
 	url = git@github.com:google/googletest.git
+[submodule "deps"]
+	path = deps
+	url = git@github.com:ichiroprogrammer/deps.git
