--- a/o/.gitignore
+++ b/o/.gitignore
@@ -1,3 +1,26 @@
 *
 !.gitignore
-!comprehensive_cpp.md
+!afterword.md
+!architecture.md
+!bibliography.md
+!code_analysis.md
+!coding_style.md
+!comment.md
+!concurrency.md
+!cpp_improve.md
+!debug.md
+!deps.md
+!design_pattern.md
+!dev_tools.md
+!dynamic_memory_allocation.md
+!exercise_a.md
+!exercise_q.md
+!introduction.md
+!naming_practice.md
+!process_and_infra.md
+!programming_convention.md
+!sample_code.md
+!software_practice.md
+!solid.md
+!template_meta_programming.md
+!term_explanation.md
