--- a/o/.gitignore
+++ b/o/.gitignore
@@ -7,7 +7,10 @@
 !coding_style.md
 !comment.md
 !concurrency.md
+!cpp_idiom.md
 !cpp_improve.md
+!cpp_semantics.md
+!cpp_standard.md
 !debug.md
 !deps.md
 !design_pattern.md
