--- a/example/etc/Makefile
+++ b/example/etc/Makefile
@@ -2,7 +2,7 @@ SRCS:=\
 	coding_style.cpp comment.cpp debug.cpp naming.cpp ut.cpp
 
 OBJDIR:=
-SHARED:=../../deep/
+SHARED:=../../essential/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 include $(SHARED)make/gtest.mk
