--- a/example/ref_async_r1/Makefile
+++ b/example/ref_async_r1/Makefile
@@ -2,7 +2,7 @@ SRCS:=lib.cpp lib_ut.cpp
 SRCS2:=main.cpp lib.cpp
 
 OBJDIR:=
-SHARED:=../../deep/
+SHARED:=../../essential/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 include $(SHARED)make/gtest.mk
