--- a/example/ref_async_r4/Makefile
+++ b/example/ref_async_r4/Makefile
@@ -2,7 +2,7 @@ SRCS:=model.cpp view.cpp controller.cpp model_ut.cpp view_ut.cpp controller_ut.c
 SRCS2:=main.cpp model.cpp view.cpp controller.cpp 
 
 OBJDIR:=
-SHARED:=../../deep/
+SHARED:=../../essential/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 include $(SHARED)make/gtest.mk
