--- a/example/programming_convention/Makefile
+++ b/example/programming_convention/Makefile
@@ -5,7 +5,7 @@ SRCS:=\
 	type_const_ut.cpp pkg.cpp raw_literal_ut.cpp
 
 OBJDIR:=
-SHARED:=../../deep/
+SHARED:=../../essential/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 include $(SHARED)make/gtest.mk
