--- a/example/ref_async_r6/Makefile
+++ b/example/ref_async_r6/Makefile
@@ -4,7 +4,7 @@ SRCS:=arg_ut.cpp controller_ut.cpp model_ut.cpp lib_ut.cpp \
 SRCS2:=main.cpp arg.cpp controller.cpp model.cpp view.cpp lib.cpp 
 
 OBJDIR:=
-SHARED:=../../deep/
+SHARED:=../../essential/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 include $(SHARED)make/gtest.mk
