--- a/example/ref_org/Makefile
+++ b/example/ref_org/Makefile
@@ -1,7 +1,7 @@
 SRCS2:=main.cpp
 
 OBJDIR:=
-SHARED:=../../deep/
+SHARED:=../../essential/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 
