update essential and split func_ut.cpp

--- a/exercise/design_pattern_a/Makefile
+++ b/exercise/design_pattern_a/Makefile
@@ -5,7 +5,7 @@ SRCS:=\
     strategy.cpp template_method.cpp visitor.cpp crtp.cpp \
 
 OBJDIR:=
-SHARED:=../../deep/
+SHARED:=../../essential/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 include $(SHARED)make/gtest.mk
