--- a/exercise/solid_a/Makefile
+++ b/exercise/solid_a/Makefile
@@ -6,7 +6,7 @@ SRCS:=\
     srp_test_score.cpp srp_test_score_ut.cpp
 
 OBJDIR:=
-SHARED:=../../deep/
+SHARED:=../../essential/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 include $(SHARED)make/gtest.mk
