--- a/exercise/template_a/Makefile
+++ b/exercise/template_a/Makefile
@@ -3,7 +3,7 @@ SRCS:=\
     template_template.cpp is_same.cpp exists_func.cpp array_op.cpp scoped_guard.cpp
 
 OBJDIR:=
-SHARED:=../../deep/
+SHARED:=../../essential/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 include $(SHARED)make/gtest.mk
