--- a/exercise/programming_convention_a/Makefile
+++ b/exercise/programming_convention_a/Makefile
@@ -2,7 +2,7 @@ SRCS:=\
 	class.cpp operator.cpp etc.cpp syntax.cpp func.cpp type.cpp
 
 OBJDIR:=
-SHARED:=../../deep/
+SHARED:=../../essential/
 include $(SHARED)make/env.mk
 include $(SHARED)make/example.mk
 include $(SHARED)make/gtest.mk
